V6120: Correzioni su OverallView

--- a/Prevu.Synoptics.V6120_Novatex/OverallView.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/OverallView.xaml
@@ -12,7 +12,21 @@
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
               d:Background="{DynamicResource MaterialDesignPaper}" >
-    <Canvas Height="7000" Width="9394">
+    <Canvas Height="7063" Width="9394">
+        <Labels:Pipe Width="60" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="1737" Canvas.Top="2354" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="38" RenderTransformOrigin="0.5,0.5" StatusComponent="222-01-MA1" Canvas.Left="1003" Canvas.Top="2269" HorizontalAlignment="Center" VerticalAlignment="Top" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Labels:Pipe Width="370" RenderTransformOrigin="0.5,0.5" StatusComponent="117-01-MA1" Canvas.Left="4425" Canvas.Top="869" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -37,9 +51,9 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="2510" RenderTransformOrigin="0.5,0.5" StatusComponent="117-01-MA1" Canvas.Left="4608" Canvas.Top="134" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="45" RenderTransformOrigin="0.5,0.5" StatusComponent="224-01-MA1" Canvas.Left="123" Canvas.Top="2348" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="8942" RenderTransformOrigin="0.5,0.5" StatusComponent="225-01-MA1" Canvas.Left="200" Canvas.Top="2202" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="227-02-EC1" VisibilitySignal="ECS1" />
-        <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="225-01-MA1" Canvas.Left="171" Canvas.Top="2231" VisibilityComponent="227-02-EC1" VisibilitySignal="ECS1" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="63" RenderTransformOrigin="0.5,0.5" StatusComponent="224-01-MA1" Canvas.Left="123" Canvas.Top="2348" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="8121" RenderTransformOrigin="0.5,0.5" StatusComponent="222-01-MA1" Canvas.Left="1021" Canvas.Top="2202" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="42" RenderTransformOrigin="0.5,0.5" StatusComponent="222-01-MA1" Canvas.Left="1001" Canvas.Top="2221" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -75,29 +89,29 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="1685" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5736" Canvas.Top="5600" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="102" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5687" Canvas.Top="5650" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="1833" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5588" Canvas.Top="5600" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5578" Canvas.Top="5878" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="242" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5617" Canvas.Top="5839" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="190" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5495" Canvas.Top="5693" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5084" Canvas.Top="5876" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="98" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5119" Canvas.Top="5841" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="574" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5166" Canvas.Top="5958" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="426" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5166" Canvas.Top="5888" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5063" Canvas.Top="5794" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="29" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5141" Canvas.Top="5794" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="1472" RenderTransformOrigin="0.5,0.5" StatusComponent="886-01-MA1" Canvas.Left="5362" Canvas.Top="4510" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
@@ -304,7 +318,7 @@
         <Labels:Pipe Width="1797" RenderTransformOrigin="0.5,0.5" StatusComponent="457-01-MA1" Canvas.Left="7399" Canvas.Top="4221" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="113" RenderTransformOrigin="0.5,0.5" StatusComponent="457-01-MA1" Canvas.Left="7290" Canvas.Top="3945" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="117" RenderTransformOrigin="0.5,0.5" StatusComponent="457-01-MA1" Canvas.Left="9213" Canvas.Top="4221" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Width="98" RenderTransformOrigin="0.5,0.5" StatusComponent="456-01-MA1" Canvas.Left="7930" Canvas.Top="3469" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="122" RenderTransformOrigin="0.5,0.5" StatusComponent="456-01-MA1" Canvas.Left="7906" Canvas.Top="3469" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="74" RenderTransformOrigin="0.5,0.5" StatusComponent="373-01-MA1" Canvas.Left="5164" Canvas.Top="3138" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Center" />
         <Labels:Pipe Width="1206" RenderTransformOrigin="0.5,0.5" StatusComponent="341-01-MA1" Canvas.Left="4470" Canvas.Top="3280" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
@@ -431,7 +445,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="310" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="1734" Canvas.Top="2392" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="308" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="1734" Canvas.Top="2392" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="109" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="1634" Canvas.Top="2915" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="2787" Canvas.Top="2356" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
@@ -440,7 +454,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="690" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="1422" Canvas.Top="2756" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="700" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="1417" Canvas.Top="2751" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -449,7 +463,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="835" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="937" Canvas.Top="3096" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="83" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="863" Canvas.Top="2917" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="1052" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="1764" Canvas.Top="2329" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="1060" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="1764" Canvas.Top="2329" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="188" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="847" Canvas.Top="3007" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -525,7 +539,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="619" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="1259" Canvas.Top="2300" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="415" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="1463" Canvas.Top="2300" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="144" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="1734" Canvas.Top="1694" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="456" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="1648" Canvas.Top="1920" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
@@ -541,7 +555,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="806" RenderTransformOrigin="0.5,0.5" StatusComponent="098-01-MA1" Canvas.Left="2580" Canvas.Top="678" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="810" RenderTransformOrigin="0.5,0.5" StatusComponent="098-01-MA1" Canvas.Left="2578" Canvas.Top="680" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -550,7 +564,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="365" RenderTransformOrigin="0.5,0.5" StatusComponent="098-01-MA1" Canvas.Left="2979" Canvas.Top="279" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="1699" RenderTransformOrigin="0.5,0.5" StatusComponent="053-01-MA1" Canvas.Left="2847" Canvas.Top="1220" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="098-01-MA1" Canvas.Left="2922" Canvas.Top="1078" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="098-01-MA1" Canvas.Left="2912" Canvas.Top="1080" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Center" />
         <Labels:Pipe Width="753" RenderTransformOrigin="0.5,0.5" StatusComponent="158-01-MA1" Canvas.Left="5931" Canvas.Top="1198" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="606" RenderTransformOrigin="0.5,0.5" StatusComponent="168-01-MA1" Canvas.Left="5908" Canvas.Top="1320" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="185" RenderTransformOrigin="0.5,0.5" StatusComponent="168-01-MA1" Canvas.Left="6504" Canvas.Top="1597" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
@@ -584,8 +598,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="125" RenderTransformOrigin="0.5,0.5" StatusComponent="184-01-MA1" Canvas.Left="6122" Canvas.Top="1567" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="225-01-MA1" Canvas.Left="9051" Canvas.Top="1047" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="227-02-EC1" VisibilitySignal="ECS1" />
-        <Labels:Pipe Width="1158" RenderTransformOrigin="0.5,0.5" StatusComponent="225-01-MA1" Canvas.Left="8561" Canvas.Top="1624" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="227-02-EC1" VisibilitySignal="ECS1" >
+        <Labels:Pipe Width="53" RenderTransformOrigin="0.5,0.5" StatusComponent="222-01-MA1" Canvas.Left="9089" Canvas.Top="1043" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="1162" RenderTransformOrigin="0.5,0.5" StatusComponent="222-01-MA1" Canvas.Left="8559" Canvas.Top="1622" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -610,7 +624,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <local:P010 CacheMode="BitmapCache" Canvas.Left="15" Canvas.Top="11" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True" />
-        <local:P050 CacheMode="BitmapCache" Canvas.Left="1438" Canvas.Top="424" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P050 CacheMode="BitmapCache" Canvas.Left="1410" Canvas.Top="424" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P087 CacheMode="BitmapCache" Canvas.Left="6308" Canvas.Top="61" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P100 CacheMode="BitmapCache" Canvas.Left="3009" Canvas.Top="195" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P140 CacheMode="BitmapCache" Canvas.Left="4444" Canvas.Top="610" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
@@ -622,16 +636,16 @@
         <local:P288 CacheMode="BitmapCache" Canvas.Left="316" Canvas.Top="1240" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P330 CacheMode="BitmapCache" Canvas.Left="3448" Canvas.Top="3104" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P350 CacheMode="BitmapCache" Canvas.Left="5145" Canvas.Top="2637" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P430 CacheMode="BitmapCache" Canvas.Left="6415" Canvas.Top="3165" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P430 CacheMode="BitmapCache" Canvas.Left="6407" Canvas.Top="3165" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P460 CacheMode="BitmapCache" Canvas.Left="7800" Canvas.Top="3361" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P530 CacheMode="BitmapCache" Canvas.Left="724" Canvas.Top="4365" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P557 CacheMode="BitmapCache" Canvas.Left="1526" Canvas.Top="5030" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P810 CacheMode="BitmapCache" Canvas.Left="2989" Canvas.Top="4362" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P880 CacheMode="BitmapCache" Canvas.Left="4355" Canvas.Top="5078" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P910 CacheMode="BitmapCache" Canvas.Left="5823" Canvas.Top="4513" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P950 CacheMode="BitmapCache" Canvas.Left="5763" Canvas.Top="5548" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P997 CacheMode="BitmapCache" Canvas.Left="7019" Canvas.Top="6112" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="1741" Canvas.Top="2350" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <local:P950 CacheMode="BitmapCache" Canvas.Left="5717" Canvas.Top="5610" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P997 CacheMode="BitmapCache" Canvas.Left="6973" Canvas.Top="6174" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ES3" Canvas.Left="5566" Canvas.Top="5827" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
