--- a/Prevu.Synoptics.V3923_Evanses/Pages/P940.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P940.xaml
@@ -36,7 +36,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="85" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-EC1" Color="ByProduct" Canvas.Left="1067" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="ByProduct" Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-EC1" Canvas.Left="1117" Canvas.Top="418" HorizontalAlignment="Left" VerticalAlignment="Center" >
+        <Labels:Pipe Color="ByProduct" Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="1117" Canvas.Top="418" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
