V4125: Added Metal detector on P020; Changed image for sand declassifier on P288

--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P020.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P020.xaml
@@ -79,6 +79,7 @@
                 </TransformGroup>
             </Machines:EXC_HeatExchanger.RenderTransform>
         </Machines:EXC_HeatExchanger>
+        <Machines:V01_EC_MetalDetector Canvas.Left="610" Canvas.Top="132" Height="60" Width="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle HorizontalAlignment="Center" Height="2" Stroke="Black" VerticalAlignment="Top" Width="115" RenderTransformOrigin="0.5,0.5" Canvas.Left="1059" Canvas.Top="534"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="76" Canvas.Left="368" Canvas.Top="712">
             <Machines:CV_Valve_001.RenderTransform>
@@ -110,7 +111,7 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="018-01-MA1" Canvas.Left="673" Canvas.Top="129"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="018-01-MA1" Canvas.Left="708" Canvas.Top="133"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-41-LT1" Canvas.Left="1100" Canvas.Top="255"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-22-CV1" Canvas.Left="544" Canvas.Top="357"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-21-TT1" Canvas.Left="1165" Canvas.Top="512"/>
@@ -128,7 +129,8 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-23-CV1" Canvas.Left="294" Canvas.Top="705"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-11-R1" Canvas.Left="240" Canvas.Top="489"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-42-TT1" Canvas.Left="240" Canvas.Top="567"/>
-        <Labels:DeviceLabel ComponentName="018-71-ECS1" Canvas.Left="499" Canvas.Top="76" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="018-71-ECS1" Canvas.Left="439" Canvas.Top="45" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="018-02-EC1" Canvas.Left="596" Canvas.Top="77" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="020-SHREDDER" JumpToLabel="098-01-MA1" Canvas.Left="1214" Canvas.Top="721"/>
     </Canvas>
 </UserControl>
