--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P288.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P288.xaml
@@ -17,7 +17,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="99" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="220" Canvas.Top="135" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="129" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="220" Canvas.Top="135" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="172" StatusComponent="288-21-CV1" Canvas.Left="891" Canvas.Top="259"/>
         <Labels:Pipe Color="Water" Width="135" StatusComponent="288-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="825" Canvas.Top="324" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -36,7 +36,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="304" StatusComponent="291-01-MA1" Canvas.Left="939" Canvas.Top="519" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="190" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="222" Canvas.Top="228" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="130" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="282" Canvas.Top="198" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -54,14 +54,14 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="ByProduct" Width="111" StatusComponent="286-01-MA1" Canvas.Left="379" Canvas.Top="488"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="107" StatusComponent="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="249" Canvas.Top="533"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="75" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="251" Canvas.Top="502"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="101-01-MA1" Canvas.Left="243" Canvas.Top="403">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="208" RenderTransformOrigin="0.5,0.5" StatusComponent="101-01-MA1" Canvas.Left="223" Canvas.Top="383">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="52" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="191" Canvas.Top="273">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="52" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="175" Canvas.Top="273">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -92,19 +92,22 @@
         </Machines:CV_Valve_001>
         <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1059" Canvas.Top="626"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="467" Canvas.Top="492"/>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="195" Canvas.Top="283"/>
+        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="179" Canvas.Top="283"/>
         <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1059" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="322" Canvas.Top="662" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="346" Canvas.Top="677" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_RTF_Microfilter Canvas.Left="296" Canvas.Top="433" Height="130" Width="144" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_SCW_Screw_wHopper Canvas.Left="197" Canvas.Top="195" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="182" Height="174">
-            <Machines:V01_SCW_Screw_wHopper.RenderTransform>
+        <Machines:V01_DCT_Decanter Canvas.Left="748" Canvas.Top="379" Height="360" Width="224" ComponentName="288-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DSCW_SandClassifier Canvas.Left="185" Canvas.Top="209" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Height="120" VerticalAlignment="Center" Width="208">
+            <Machines:V01_DSCW_SandClassifier.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
                 </TransformGroup>
-            </Machines:V01_SCW_Screw_wHopper.RenderTransform>
-        </Machines:V01_SCW_Screw_wHopper>
-        <Machines:V01_DCT_Decanter Canvas.Left="748" Canvas.Top="379" Height="360" Width="224" ComponentName="288-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            </Machines:V01_DSCW_SandClassifier.RenderTransform>
+        </Machines:V01_DSCW_SandClassifier>
         <Rectangle Height="2" Stroke="Black" Width="92" RenderTransformOrigin="0.5,0.5" Canvas.Left="1160" Canvas.Top="636" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -116,7 +119,7 @@
         <Labels:JumpLabel JumpFromLabel="291-01-MA1" JumpToLabel="210-01-MA1" Canvas.Left="1364" Canvas.Top="404" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="291-01-MA1" JumpToLabel="110-01-MA1" Canvas.Left="1223" Canvas.Top="487" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="101-01-MA1" Canvas.Left="150" Canvas.Top="102" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="283-01-MA1" Canvas.Left="105" Canvas.Top="209"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="283-01-MA1" Canvas.Left="69" Canvas.Top="209"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-21-CV1" Canvas.Left="1037" Canvas.Top="189"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="293-01-MA1" Canvas.Left="1037" Canvas.Top="676"/>
         <Labels:DeviceLabel ComponentName="291-01-MA1" Canvas.Left="1037" Canvas.Top="443" HorizontalAlignment="Left" VerticalAlignment="Center"/>
